[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Sergei.Mulov <cmulov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pip = "^24.3.1"
setuptools = "^75.6.0"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
